--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:theme="@style/Theme.MyProject">
         <activity android:name=".ChooseThemeActivity"></activity>
         <activity android:name=".WordActivity"></activity>
+        <activity android:name=".GameActivity"></activity>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
