--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myproject">
+    package="com.example.kideng">
 
     <application
         android:allowBackup="true"
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyProject">
-        <activity android:name=".ChooseThemeActivity"></activity>
-        <activity android:name=".WordActivity"></activity>
-        <activity android:name=".GameActivity"></activity>
+        <activity android:name="com.example.kideng.activities.ChooseThemeActivity"></activity>
+        <activity android:name="com.example.kideng.activities.WordActivity"></activity>
+        <activity android:name="com.example.kideng.activities.GameActivity"></activity>
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.kideng.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
