added greeting for first entrance (without animation) and added user entity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:name="com.example.kideng.activities.ChooseThemeActivity"></activity>
         <activity android:name="com.example.kideng.activities.WordActivity"></activity>
         <activity android:name="com.example.kideng.activities.GameActivity"></activity>
+        <activity android:name="com.example.kideng.activities.FirstEntranceActivity"></activity>
 
         <activity android:name="com.example.kideng.activities.MainActivity">
             <intent-filter>
