--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.kideng">
 
     <application
+        android:name="com.example.kideng.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,7 +16,8 @@
         <activity android:name="com.example.kideng.ui.activities.FirstEntranceActivity" />
         <activity android:name="com.example.kideng.ui.activities.AddActivity" />
 
-        <activity android:name="com.example.kideng.ui.activities.MainActivity">
+        <activity android:name="com.example.kideng.ui.activities.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
