--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         <activity android:name="com.example.kideng.ui.activities.ChooseThemeActivity" />
         <activity android:name="com.example.kideng.ui.activities.WordActivity" />
         <activity android:name="com.example.kideng.ui.activities.GameActivity" />
-        <activity android:name="com.example.kideng.ui.activities.FirstEntranceActivity" />
+        <activity android:name="com.example.kideng.ui.activities.FirstEntranceActivity"
+            android:noHistory="true" />
         <activity android:name="com.example.kideng.ui.activities.DictThemeActivity" />
         <activity android:name="com.example.kideng.ui.activities.DictWordActivity" />
 
