--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'android.arch.navigation:navigation-ui:1.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 }
