--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,27 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.6.1'
+
+    // Rounded Image View
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //ROOM ORM
     implementation "android.arch.persistence.room:runtime:1.1.1"
-    implementation 'android.arch.navigation:navigation-ui:1.0.0'
+
+    // Navigation Component
+    implementation 'androidx.navigation:navigation-ui:2.5.0'
+    implementation 'androidx.navigation:navigation-fragment:2.5.0'
+
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 }
